<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">My Nanodegree Apps!</string>

    <string name="home_app_button_name_1">Spotify Streamer</string>
    <string name="home_app_button_name_2">Super Duo - Football Scores</string>
    <string name="home_app_button_name_3">Super Duo - Football Library</string>
    <string name="home_app_button_name_4">Build It Bigger</string>
    <string name="home_app_button_name_5">XYZ Reader</string>
    <string name="home_app_button_name_6">Capstone: My Own App</string>
</resources>
