<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_app_button_name_1"
        android:id="@+id/home_app_button_1"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:minWidth="300dp"
        android:minHeight="55dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:background="@color/colorAccentLight"
        android:textColor="@android:color/black"
        android:onClick="spotifyStreamerButtonOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_app_button_name_2"
        android:id="@+id/home_app_button_2"
        android:layout_marginTop="10dp"
        android:minWidth="300dp"
        android:minHeight="55dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/home_app_button_1"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccentLight"
        android:textColor="@android:color/black"
        android:onClick="superDuoFootballScoresButtonOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_app_button_name_3"
        android:id="@+id/home_app_button_3"
        android:layout_marginTop="10dp"
        android:minWidth="300dp"
        android:minHeight="55dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/home_app_button_2"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccentLight"
        android:textColor="@android:color/black"
        android:onClick="superDuoFootballLibraryButtonOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_app_button_name_4"
        android:id="@+id/home_app_button_4"
        android:layout_marginTop="10dp"
        android:minWidth="300dp"
        android:minHeight="55dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/home_app_button_3"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccentLight"
        android:textColor="@android:color/black"
        android:onClick="buildItBiggerButtonOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_app_button_name_5"
        android:id="@+id/home_app_button_5"
        android:layout_marginTop="10dp"
        android:minWidth="300dp"
        android:minHeight="55dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/home_app_button_4"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccentLight"
        android:textColor="@android:color/black"
        android:onClick="xyzReaderButtonOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_app_button_name_6"
        android:id="@+id/home_app_button_6"
        android:layout_marginTop="10dp"
        android:minWidth="300dp"
        android:minHeight="55dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/home_app_button_5"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:onClick="capstoneButtonOnClick" />
</RelativeLayout>
